--- a/pages/pag6.html
+++ b/pages/pag6.html
@@ -1,95 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relojes inteligentes</title>
+    <title>SmartShop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2cb25f2c39.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header>
-        <div class="barra-header">
-            <div class="izquierda">
-                <form class="inicio-sesion-form" action="">
-                    <input type="email" placeholder="Correo Electrónico">
-                    <input type="password" placeholder="Contraseña">
-                    <button type="submit">Iniciar Sesión</button>
-                </form>
+        <nav class="nav-header">
+            <div>
+                <img src="../assets/img/Logo smartshop v2.png" alt="logo" class="logo-smartshop">
             </div>
-            <div class="centro">
-                <p class="envios">Envío gratis a todo el país</p>
+            <div class="div-centro">
+                <h4> Envíos a todo el país</h4>
             </div>
-            <div class="derecha">
-                <p class="carrito"> <button class="boton-carrito"><a href="#"><img class="carrito-img"
-                                src="../assets/img/carrito-de-compras.png" alt="carrito-img">Carrito </a> </button>
-                </p>
+            <label for="check" class="bar-btn">
+                <i class="fa-solid fa-bars" style="color: #38B6FF;"></i>
+            </label>
+            <input type="checkbox" id="check">
+            <ul class="nav-menu">
+                <li><a class="active" href="../index.html">Inicio</a></li>
+                <li><a href="../pages/pag3.html">Relojes Inteligentes</a></li>
+                <li><a href="../pages/pag4.html">Auriculares</a></li>
+                <li><a href="../pages/pag2.html">Celulares inteligentes</a></li>
+                <li><a href="../pages/pag5.html">Opiniones</a></li>
+                <li><a href="../pages/pag6.html">Preguntas Frecuentes</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="titulo">
+            <h2>Preguntas Frecuentes</h2>
+        </section>
+        <section>
+            <div class="preguntasyrespuestas">
+                <h4>¿Ofrecen envío internacional?</h4>
+                <p>R: Por el momento los envios son solo en Argentina, en cualquier provincia del país, esperamos en un futuro cercano poder ofrecer envios internacionales!</p>
+                <h4>¿Cuál es su política de devoluciones?</h4>
+                <p>R: Nuestra política de devolución es simple. Si no está completamente satisfecho con su compra podrá devolver el producto correspondiente y tendrá que responder unas preguntas relacionadas con el problema que le haya sucedido, si se aprueban dichas respuestas su dinero sera reembolsado</p>
+                <h4>¿Cómo puedo realizar un pedido en línea?</h4>
+                <p>R: Realizar un pedido en línea es fácil. Simplemente agregue los productos que desea comprar a su carrito de compras y luego complete los datos que se solicitan, siendo bien especifico, al finalizar cliquear el boton "confirmar compra" y le llegara una notificacion a su mail correspondiente con el seguimiento del envío</p>
+                <h4>¿Cuánto tiempo tardará mi pedido en llegar?</h4>
+                <p>R: El tiempo de entrega depende de varios factores, como la ubicación del destino y el método deenvío seleccionado pero cuando tengamos su información de vivienda le llegara un mail notificando en cuantos dias estimados llegará su producto</p>
             </div>
-        </div>
-        <h1> SmartShop </h1>
-        <nav class="barra-nav">
+        </section>
+        <div>
+            <h3 class="nrtd">¿No resolvimos tu duda? Dejanos cual es!</h3>
             <ul>
-                <li>
+                <li class="barra-pregunta">
                     <form action="#" method="get">
-                        <input type="text" name="busqueda" placeholder="¿Qué estás buscando...?">
-                        <button class="boton-inicio" type="submit">Buscar</button>
+                        <input type="text" name="busqueda" placeholder="Dejanos tu pregunta">
+                        <button class="boton-inicio" type="submit">Enviar</button>
                     </form>
                 </li>
             </ul>
-        </nav>
-
-        <div>
-            <section class="s.image">
-                <ul class="contenedor">
-                    <li> <button> <a href="../pages/pag2.html">Celulares inteligentes</a></button></li>
-                    <li> <button> <a href="../pages/pag3.html">Relojes inteligentes</a></button></li>
-                    <li> <button> <a href="../pages/pag4.html">Auriculares</a></button></li>
-                    <li> <button> <a href="../pages/pag5.html">Reseñas</a></button></li>
-                </ul>
-                <ul class="contenedor2">
-                    <li> <button> <a href="../index.html">Inicio</a></button> </li>
-                    <li> <button> <a href="../pages/pag6.html">Preguntas Frecuentes</a> </button> </li>
-                </ul>
-            </section>
         </div>
-    </header>
-
-    <main>
-        <section class="grid-preguntas">
-            <section class="titulo">
-                <h2>Preguntas Frecuentes</h2>
-            </section>
-            <div class="preguntas">
-                <h4>¿Ofrecen envío internacional?</h4>
-                <h4>¿Cuál es su política de devoluciones?</h4>
-                <h4>¿Cómo puedo realizar un pedido en línea?</h4>
-                <h4>¿Cuánto tiempo tardará mi pedido en llegar?</h4>
-            </div>
-            <div class="respuestas">
-                <p>R: Sí, ofrecemos envío internacional a la mayoría de los países del mundo...</p>
-                <p>R: Nuestra política de devolución es simple. Si no está completamente satisfecho con su compra...</p>
-                <p>R: Realizar un pedido en línea es fácil. Simplemente agregue los productos que desea comprar a su
-                    carrito de compras...</p>
-                <p>R: El tiempo de entrega depende de varios factores, como la ubicación del destino y el método de
-                    envío seleccionado...</p>
-            </div>
-        </section>
-
-
-
-
-
     </main>
     <footer>
         <img class="whatsapp-logo" src="../assets/img/whatsapp (1).png" alt="logo whatsapp">
         <img class="instagram-logo" src="../assets/img/instagram (1).png" alt="logo instagram">
         <img class="gmail-logo" src="../assets/img/gmail.png" alt="gmail logo">
-
         <div class="footer-container">
             <div class="footer-info">
                 <h4>SmartShop</h4>
@@ -98,8 +74,6 @@
             <div class="footer-credit">
                 <p>Proyecto elaborado por Alejo de la Arena</p>
             </div>
-
     </footer>
 </body>
-
 </html>
